--- a/humanitarian.html
+++ b/humanitarian.html
@@ -81,11 +81,9 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 .section:nth-of-type(3){ background:linear-gradient(135deg,#2a9d8f,#21867a); color:#fff; }
 .section:nth-of-type(4){ background:linear-gradient(135deg,#0b61b6,#1a75d1); color:#fff; }
 .section:nth-of-type(5){ background:linear-gradient(135deg,#7a2fa6,#5e2080); color:#fff; }
+.section:nth-of-type(6){ background:linear-gradient(135deg,#f5c400,#d4a500); color:#333; }
 
 .section > *{ position:relative; z-index:2; }
-
-
-    
 
 /* floating home button */
 .floating-home-btn {
@@ -114,49 +112,93 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 <section class="section">
     <div class="text">
         <h2>Rapid Crisis Response</h2>
-        <p>We deliver timely, compassionate assistance to individuals and families affected by disasters, conflicts, and hardship. Our programs provide lifesaving support including food, clean water, shelter, and hygiene supplies.</p>
+        <p>We deliver timely, compassionate assistance to individuals and families affected by disasters, conflicts, and hardship. Our programs provide lifesaving support including food, clean water, shelter, hygiene supplies, and inclusive support for people with disabilities and drug abuse recovery programs.</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round">
 </section>
 
-<!-- 2. Disaster Relief -->
+<!-- 2. Food & Nutrition Support -->
 <section class="section">
     <div class="text">
-        <h2>Disaster Relief & Recovery</h2>
-        <p>We organize emergency interventions in regions hit by floods, droughts, or other natural disasters. Our teams collaborate with local authorities to provide immediate relief and support rebuilding efforts.</p>
+        <h2>Food & Nutrition Assistance</h2>
+        <p>We distribute food supplies and nutrition support to vulnerable communities. Programs are county-specific for better reach:</p>
+        <ul>
+            <li><strong>Nairobi:</strong> Kibera, Mathare</li>
+            <li><strong>Muranga:</strong> Kandara, Maragua</li>
+            <li><strong>Kiambu:</strong> Thika, Ruiru</li>
+            <li><strong>Nakuru:</strong> Njoro, Naivasha</li>
+            <li><strong>Machakos:</strong> Machakos town, Mwala</li>
+            <li><strong>Mombasa:</strong> Likoni, Kisauni</li>
+        </ul>
     </div>
     <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded">
 </section>
 
-<!-- 3. Food & Water Security -->
+<!-- 3. Shelter & Safety -->
 <section class="section center-section">
-    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal">
-    <div class="text">
-        <h2>Food & Water Security</h2>
-        <p>We ensure communities have access to nutritious food and clean water during emergencies. Sustainable solutions such as water purification, storage, and food distribution systems are provided.</p>
-    </div>
-</section>
-
-<!-- 4. Shelter & Safety -->
-<section class="section">
-    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon">
+    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-diagonal">
     <div class="text">
         <h2>Safe Shelter & Housing</h2>
-        <p>Temporary shelters, tents, and reinforced housing are provided to protect families. We also improve security measures for vulnerable communities during crisis periods.</p>
+        <p>Temporary shelters, tents, and reinforced housing are provided to protect families. Programs also cater to disability-inclusive shelters and safe spaces for youth recovering from drug abuse.</p>
+        <ul>
+            <li><strong>Nairobi:</strong> Informal settlements</li>
+            <li><strong>Muranga & Kiambu:</strong> Community shelters</li>
+            <li><strong>Nakuru:</strong> Displaced families support</li>
+            <li><strong>Machakos:</strong> Rural communities</li>
+            <li><strong>Mombasa:</strong> Coastal informal settlements</li>
+        </ul>
     </div>
 </section>
 
-<!-- 5. Psychosocial Support -->
+<!-- 4. Water & Sanitation -->
+<section class="section">
+    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-hexagon">
+    <div class="text">
+        <h2>Clean Water & Hygiene</h2>
+        <p>We ensure access to safe water and hygiene facilities, with special attention to accessibility for persons with disabilities.</p>
+        <ul>
+            <li><strong>Nairobi:</strong> Kibera, Mathare</li>
+            <li><strong>Muranga:</strong> Maragua, Kandara</li>
+            <li><strong>Kiambu:</strong> Ruiru, Thika</li>
+            <li><strong>Nakuru:</strong> Naivasha, Njoro</li>
+            <li><strong>Machakos:</strong> Machakos town, Mwala</li>
+            <li><strong>Mombasa:</strong> Likoni, Kisauni</li>
+        </ul>
+    </div>
+</section>
+
+<!-- 5. Drug Abuse Prevention & Rehabilitation -->
 <section class="section center-section">
     <div class="text">
-        <h2>Psychosocial Support</h2>
-        <p>We provide counseling, community support programs, and trauma recovery initiatives. Our aim is to help affected individuals regain stability, resilience, and hope for the future.</p>
+        <h2>Drug Abuse Prevention & Rehabilitation</h2>
+        <p>We provide awareness campaigns, counseling, and rehabilitation for youth. Programs are tailored per county:</p>
+        <ul>
+            <li><strong>Nairobi:</strong> Mathare Youth Rehabilitation Center</li>
+            <li><strong>Muranga:</strong> Kandara & Maragua youth rehab</li>
+            <li><strong>Kiambu:</strong> Thika youth rehab</li>
+            <li><strong>Nakuru:</strong> Nakuru town youth centers</li>
+            <li><strong>Machakos:</strong> Machakos town youth rehab</li>
+            <li><strong>Mombasa:</strong> Likoni youth programs</li>
+        </ul>
     </div>
     <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf">
 </section>
 
-
-
+<!-- 6. Disability Inclusion & Youth Engagement -->
+<section class="section">
+    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-rounded">
+    <div class="text">
+        <h2>Disability Support & Youth Engagement</h2>
+        <p>We provide assistive devices, training, inclusive education, and mentorship for youth-led community projects. Programs aim to build resilience and promote leadership among young people while supporting persons with disabilities.</p>
+        <ul>
+            <li><strong>Nairobi:</strong> Nairobi Rehabilitation Center for Disabilities</li>
+            <li><strong>Muranga & Kiambu:</strong> Community support programs</li>
+            <li><strong>Nakuru:</strong> Nakuru County disability initiatives</li>
+            <li><strong>Machakos:</strong> Inclusive education programs</li>
+            <li><strong>Mombasa:</strong> Likoni & Kisauni support centers</li>
+        </ul>
+    </div>
+</section>
 
 <a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
   <button class="floating-home-btn floatHomeBtn" aria-label="Home">
@@ -166,8 +208,6 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     </svg>
   </button>
 </a>
-
-    
 
 <footer>
     © <script>document.write(new Date().getFullYear());</script> Humanitarian Aid — All Rights Reserved.
