--- a/health.html
+++ b/health.html
@@ -84,9 +84,6 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 .section > *{ position:relative; z-index:2; }
 
-
-    
-
 /* floating home button */
 .floating-home-btn {
   position: fixed;
@@ -114,7 +111,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 <section class="section">
     <div class="text">
         <h2>Promoting Healthy Communities</h2>
-        <p>Our health programs improve access to essential medical services, health education, and critical interventions for vulnerable populations. We focus on disease prevention, maternal and child health, and mental wellness.</p>
+        <p>Our health programs improve access to essential medical services, health education, and critical interventions for vulnerable populations. We focus on disease prevention, maternal and child health, mental wellness, and community outreach.</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round">
 </section>
@@ -124,6 +121,15 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     <div class="text">
         <h2>Medical Outreach Programs</h2>
         <p>We organize mobile clinics, vaccination drives, and health awareness campaigns to reach underserved communities. Our efforts provide lifesaving care and health education to those in need.</p>
+        <p><strong>Field Visits by County:</strong></p>
+        <ul>
+            <li><strong>Nairobi:</strong> Kenyatta National Hospital, Mbagathi Hospital, Kariobangi Health Centre, Nairobi Women’s Hospital.</li>
+            <li><strong>Murang’a:</strong> Murang’a Level 5 Hospital, Makuyu Health Centre, Kangari Health Centre.</li>
+            <li><strong>Kiambu:</strong> Kiambu County Referral Hospital, Limuru Health Centre, Thika Level 5 Hospital.</li>
+            <li><strong>Nakuru:</strong> Nakuru Level 5 Hospital, Kapkures Health Centre, Naivasha Sub-County Hospital.</li>
+            <li><strong>Machakos:</strong> Machakos Level 5 Hospital, Matuu Sub-County Hospital, Kangundo Health Centre.</li>
+            <li><strong>Mombasa:</strong> Mombasa County Referral Hospital, Port Reitz District Hospital, Likoni Sub-County Hospital.</li>
+        </ul>
     </div>
     <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded">
 </section>
@@ -133,7 +139,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal">
     <div class="text">
         <h2>Maternal and Child Health</h2>
-        <p>We provide specialized programs for maternal care, early childhood development, nutrition, and immunization. These interventions ensure healthier mothers and children in communities we serve.</p>
+        <p>We provide specialized programs for maternal care, early childhood development, nutrition, and immunization. Through partnerships with local hospitals and health centers, we ensure healthier mothers and children in Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa.</p>
     </div>
 </section>
 
@@ -142,7 +148,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon">
     <div class="text">
         <h2>Mental Health & Wellness</h2>
-        <p>Our initiatives promote mental wellness through awareness, counseling, community support, and training programs. We aim to reduce stigma and support holistic health in society.</p>
+        <p>Our initiatives promote mental wellness through awareness, counseling, community support, and training programs. We collaborate with health facilities across all counties to reduce stigma and support holistic health in society.</p>
     </div>
 </section>
 
@@ -150,13 +156,10 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 <section class="section">
     <div class="text">
         <h2>Engaging Youth in Health</h2>
-        <p>We educate young people on healthy lifestyles, disease prevention, and community health leadership. Youth-led health campaigns empower the next generation to champion wellness in their communities.</p>
+        <p>We educate young people on healthy lifestyles, disease prevention, and community health leadership. Youth-led health campaigns empower the next generation to champion wellness through school visits, mentorship, and hands-on volunteering in hospitals and community clinics.</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf">
 </section>
-
-
-
 
 <a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
   <button class="floating-home-btn floatHomeBtn" aria-label="Home">
@@ -167,8 +170,6 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
   </button>
 </a>
 
-
-    
 <footer>
     © <script>document.write(new Date().getFullYear());</script> Health & Wellness — All Rights Reserved.
 </footer>
