--- a/env.html
+++ b/env.html
@@ -84,9 +84,6 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 .section > *{ position:relative; z-index:2; }
 
-
-    
-
 /* floating home button */
 .floating-home-btn {
   position: fixed;
@@ -114,7 +111,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 <section class="section">
     <div class="text">
         <h2>Protecting Our Planet for Future Generations</h2>
-        <p>We empower communities to conserve natural resources, fight climate change, and adopt sustainable lifestyles. Our programs ensure cleaner environments, greener spaces, and resilient ecosystems.</p>
+        <p>We empower communities across <strong>Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa</strong> to conserve natural resources, fight climate change, and adopt sustainable lifestyles. Through hybrid learning programs, youth gain both digital knowledge and hands-on experience in environmental stewardship. Our initiatives ensure cleaner environments, greener spaces, and resilient ecosystems.</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round">
 </section>
@@ -123,7 +120,12 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 <section class="section">
     <div class="text">
         <h2>Community Conservation Initiatives</h2>
-        <p>We support tree planting, clean-up drives, ecosystem restoration, and awareness campaigns that build environmental responsibility and protect biodiversity.</p>
+        <p>Our programs focus on tree planting, mangrove restoration, urban greening, wetland protection, and ecosystem rehabilitation. Youth participate in school and community nurseries, clean-up campaigns, and practical field projects that protect biodiversity and foster environmental responsibility. Key projects include:<br>
+        - <strong>Nairobi:</strong> Urban tree planting and school nurseries<br>
+        - <strong>Murang’a & Kiambu:</strong> Reforestation and agroforestry on farms<br>
+        - <strong>Nakuru:</strong> Lake Naivasha wetland restoration and erosion control<br>
+        - <strong>Machakos:</strong> Semi-arid land reforestation<br>
+        - <strong>Mombasa:</strong> Coastal mangrove rehabilitation</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded">
 </section>
@@ -133,7 +135,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal">
     <div class="text">
         <h2>Climate Change Adaptation & Resilience</h2>
-        <p>We equip communities with knowledge and tools to withstand droughts, floods, and environmental hazards through early warning systems and climate-smart practices.</p>
+        <p>We equip communities with knowledge and tools to withstand climate challenges such as droughts, floods, and environmental hazards. Youth learn climate-smart farming, water harvesting, disaster preparedness, and renewable energy solutions. Programs include early warning systems, eco-clubs, and community workshops to enhance climate resilience.</p>
     </div>
 </section>
 
@@ -142,7 +144,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
     <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon">
     <div class="text">
         <h2>Promoting Sustainable Living</h2>
-        <p>We promote waste reduction, recycling, renewable energy use, and eco-friendly habits to protect the environment while improving livelihoods.</p>
+        <p>We teach youth and communities to reduce waste, recycle plastics, compost organic materials, and adopt renewable energy sources. Activities include solar energy installations, biogas systems, eco-friendly cooking, and campaigns for sustainable consumption. These practices protect the environment while improving livelihoods and fostering green entrepreneurship.</p>
     </div>
 </section>
 
@@ -150,12 +152,10 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 <section class="section">
     <div class="text">
         <h2>Youth-Led Environmental Innovation</h2>
-        <p>We empower young innovators to create eco-friendly solutions, lead green projects, and build a sustainable future through mentorship and innovation labs.</p>
+        <p>We empower young innovators to lead green projects, create eco-solutions, and advocate for environmental sustainability. Mentorship, innovation labs, and community projects enable youth to design impactful solutions in waste management, renewable energy, conservation, and climate adaptation. Our programs cultivate environmentally conscious leaders and innovators who contribute to a greener Kenya.</p>
     </div>
     <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf">
 </section>
-
-
 
 <a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
   <button class="floating-home-btn floatHomeBtn" aria-label="Home">
@@ -166,7 +166,6 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
   </button>
 </a>
 
-    
 <footer>
     © <script>document.write(new Date().getFullYear());</script> Environmental Stewardship — All Rights Reserved.
 </footer>
