--- a/youth.html
+++ b/youth.html
@@ -81,7 +81,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 .section:nth-of-type(3){ background:linear-gradient(135deg,#f5c400,#d4a500); color:#333; }
 .section:nth-of-type(4){ background:linear-gradient(135deg,#0b61b6,#1a75d1); color:#fff; }
 .section:nth-of-type(5){ background:linear-gradient(135deg,#f4a261,#e07b39); color:#333; }
-
+.section:nth-of-type(6){ background:linear-gradient(135deg,#f5c400,#d4a500); color:#333; }
 .section > *{ position:relative; z-index:2; }
 
 /* floating home button */
