--- a/index.html
+++ b/index.html
@@ -1423,11 +1423,11 @@ footer.site-footer{
 <main>
   <section class="hero-wrap" aria-labelledby="hero-heading">
     <div class="hero-slider">
-      <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="hero-slide slide1" alt="Slide 1">
-      <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="hero-slide slide2" alt="Slide 2">
-      <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="hero-slide slide3" alt="Slide 3">
-      <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="hero-slide slide4" alt="Slide 4">
-      <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="hero-slide slide5" alt="Slide 5">
+      <img src="https://pixabay.com/photos/group-children-boy-education-3137670/" class="hero-slide slide1" alt="Slide 1">
+      <img src="https://images.pexels.com/photos/18216395/pexels-photo-18216395.jpeg" class="hero-slide slide2" alt="Slide 2">
+      <img src="https://www.pexels.com/photo/sports-fan-with-flag-and-raised-arms-5675818/" class="hero-slide slide3" alt="Slide 3">
+      <img src="https://images.pexels.com/photos/8042458/pexels-photo-8042458.jpeg" class="hero-slide slide4" alt="Slide 4">
+      <img src="https://images.pexels.com/photos/18283970/pexels-photo-18283970.jpeg" class="hero-slide slide5" alt="Slide 5">
     </div>
 
     <div class="hero-overlay" aria-hidden="true"></div>
