--- a/index.html
+++ b/index.html
@@ -1423,9 +1423,10 @@ footer.site-footer{
 <main>
   <section class="hero-wrap" aria-labelledby="hero-heading">
     <div class="hero-slider">
-      <img src="https://pixabay.com/photos/group-children-boy-education-3137670/" class="hero-slide slide1" alt="Slide 1">
+      <img src="https://pixabay.com/images/download/group-3137670_1920.jpg" class="hero-slide slide1" alt="Slide 1">
+      https://images.pexels.com/photos/33127835/pexels-photo-33127835.jpeg
       <img src="https://images.pexels.com/photos/18216395/pexels-photo-18216395.jpeg" class="hero-slide slide2" alt="Slide 2">
-      <img src="https://www.pexels.com/photo/sports-fan-with-flag-and-raised-arms-5675818/" class="hero-slide slide3" alt="Slide 3">
+      <img src="https://images.pexels.com/photos/5675818/pexels-photo-5675818.jpeg" class="hero-slide slide3" alt="Slide 3">
       <img src="https://images.pexels.com/photos/8042458/pexels-photo-8042458.jpeg" class="hero-slide slide4" alt="Slide 4">
       <img src="https://images.pexels.com/photos/18283970/pexels-photo-18283970.jpeg" class="hero-slide slide5" alt="Slide 5">
     </div>
