--- a/edu.html
+++ b/edu.html
@@ -116,7 +116,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <p>We provide flexible digital and in-school learning support to children and youth across Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa. Our hybrid model combines technology access, community-based tutoring, skills development, and school support, ensuring that every learner can access quality education.</p>
         <p>Through online modules, mentorship, practical fieldwork, and structured study sessions, students gain knowledge, confidence, and digital literacy to succeed in the 21st century.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round" alt="Hybrid Learning Overview">
+    <img src="https://images.pexels.com/photos/12497063/pexels-photo-12497063.jpeg" class="shape-round" alt="Hybrid Learning Overview">
 </section>
 
 <!-- Section 2: Why Hybrid Learning -->
@@ -132,12 +132,12 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
             <li>Skill development in ICT, entrepreneurship, and STEM</li>
         </ul>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded" alt="Why Hybrid Learning">
+    <img src="https://images.pexels.com/photos/18283970/pexels-photo-18283970.jpeg" class="shape-rounded" alt="Why Hybrid Learning">
 </section>
 
 <!-- Section 3: County Focus -->
 <section class="section center-section">
-    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal" alt="Counties">
+    <img src="https://images.pexels.com/photos/12497062/pexels-photo-12497062.jpeg" class="shape-diagonal" alt="Counties">
     <div class="text">
         <h2>Counties We Serve</h2>
         <p>Our programs are active in:</p>
@@ -154,7 +154,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- Section 4: Program Activities -->
 <section class="section center-section">
-    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon" alt="Program Activities">
+    <img src="https://images.pexels.com/photos/35154092/pexels-photo-35154092.jpeg" class="shape-hexagon" alt="Program Activities">
     <div class="text">
         <h2>Program Activities</h2>
         <ul>
@@ -182,7 +182,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
             <li>Integrated environmental education through school tree planting initiatives</li>
         </ul>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf" alt="Program Impact">
+    <img src="https://images.pexels.com/photos/5905700/pexels-photo-5905700.jpeg" class="shape-leaf" alt="Program Impact">
 </section>
 
 <!-- Swiss Aid Connect Section -->
