--- a/edu.html
+++ b/edu.html
@@ -116,7 +116,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <p>We provide flexible digital and in-school learning support to children and youth across Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa. Our hybrid model combines technology access, community-based tutoring, skills development, and school support, ensuring that every learner can access quality education.</p>
         <p>Through online modules, mentorship, practical fieldwork, and structured study sessions, students gain knowledge, confidence, and digital literacy to succeed in the 21st century.</p>
     </div>
-    <img src="https://images.pexels.com/photos/12497063/pexels-photo-12497063.jpeg" class="shape-round" alt="Hybrid Learning Overview">
+    <img src="https://images.pexels.com/photos/12497062/pexels-photo-12497062.jpeg" class="shape-round" alt="Hybrid Learning Overview">
 </section>
 
 <!-- Section 2: Why Hybrid Learning -->
@@ -132,12 +132,15 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
             <li>Skill development in ICT, entrepreneurship, and STEM</li>
         </ul>
     </div>
-    <img src="https://images.pexels.com/photos/18283970/pexels-photo-18283970.jpeg" class="shape-rounded" alt="Why Hybrid Learning">
+    <img src="https://cdn.pixabay.com/photo/2018/02/07/18/30/group-3137670_960_720.jpg" class="shape-rounded" alt="Why Hybrid Learning">
+
+
+   
 </section>
 
 <!-- Section 3: County Focus -->
 <section class="section center-section">
-    <img src="https://images.pexels.com/photos/12497062/pexels-photo-12497062.jpeg" class="shape-diagonal" alt="Counties">
+    <img src="https://images.pexels.com/photos/5905700/pexels-photo-5905700.jpeg" class="shape-diagonal" alt="Counties">
     <div class="text">
         <h2>Counties We Serve</h2>
         <p>Our programs are active in:</p>
@@ -182,7 +185,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
             <li>Integrated environmental education through school tree planting initiatives</li>
         </ul>
     </div>
-    <img src="https://images.pexels.com/photos/5905700/pexels-photo-5905700.jpeg" class="shape-leaf" alt="Program Impact">
+    <img src=" https://images.pexels.com/photos/18283970/pexels-photo-18283970.jpeg" class="shape-leaf" alt="Program Impact">
 </section>
 
 <!-- Swiss Aid Connect Section -->
