--- a/edu.html
+++ b/edu.html
@@ -103,7 +103,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <header>
     <div class="logo-box">
-        <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="logo">
+        <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" class="logo">
     </div>
     <h1 class="page-title">Hybrid Education Centre for Youth</h1>
     <div class="empty"></div>
