--- a/env.html
+++ b/env.html
@@ -113,7 +113,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Protecting Our Planet for Future Generations</h2>
         <p>We empower communities across <strong>Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa</strong> to conserve natural resources, fight climate change, and adopt sustainable lifestyles. Through hybrid learning programs, youth gain both digital knowledge and hands-on experience in environmental stewardship. Our initiatives ensure cleaner environments, greener spaces, and resilient ecosystems.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round">
+    <img src="https://images.pexels.com/photos/1072824/pexels-photo-1072824.jpeg" class="shape-round">
 </section>
 
 <!-- 2. Conservation Programs -->
@@ -127,12 +127,12 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         - <strong>Machakos:</strong> Semi-arid land reforestation<br>
         - <strong>Mombasa:</strong> Coastal mangrove rehabilitation</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded">
+    <img src="https://cdn7.dissolve.com/p/D985_71_625/D985_71_625_1200.jpg" class="shape-rounded">
 </section>
 
 <!-- 3. Climate Action Programs -->
 <section class="section">
-    <img src="https://cdn7.dissolve.com/p/D985_71_625/D985_71_625_1200.jpg" class="shape-diagonal">
+    <img src="https://pixabay.com/images/download/x-279862_1920.jpg" class="shape-diagonal">
     <div class="text">
         <h2>Climate Change Adaptation & Resilience</h2>
         <p>We equip communities with knowledge and tools to withstand climate challenges such as droughts, floods, and environmental hazards. Youth learn climate-smart farming, water harvesting, disaster preparedness, and renewable energy solutions. Programs include early warning systems, eco-clubs, and community workshops to enhance climate resilience.</p>
@@ -141,7 +141,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 4. Sustainable Practices -->
 <section class="section">
-    <img src="https://images.pexels.com/photos/30619295/pexels-photo-30619295.jpeg">
+    <img src="https://images.pexels.com/photos/18216395/pexels-photo-18216395.jpeg">
     <div class="text">
         <h2>Promoting Sustainable Living</h2>
         <p>We teach youth and communities to reduce waste, recycle plastics, compost organic materials, and adopt renewable energy sources. Activities include solar energy installations, biogas systems, eco-friendly cooking, and campaigns for sustainable consumption. These practices protect the environment while improving livelihoods and fostering green entrepreneurship.</p>
@@ -154,7 +154,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Youth-Led Environmental Innovation</h2>
         <p>We empower young innovators to lead green projects, create eco-solutions, and advocate for environmental sustainability. Mentorship, innovation labs, and community projects enable youth to design impactful solutions in waste management, renewable energy, conservation, and climate adaptation. Our programs cultivate environmentally conscious leaders and innovators who contribute to a greener Kenya.</p>
     </div>
-    <img src="https://images.pexels.com/photos/1072824/pexels-photo-1072824.jpeg" class="shape-leaf">
+    <img src="" class="shape-leaf">
 </section>
 
 <a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
