--- a/env.html
+++ b/env.html
@@ -132,7 +132,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 3. Climate Action Programs -->
 <section class="section">
-    <img src="https://pixabay.com/images/download/x-279862_1920.jpg" class="shape-diagonal">
+    <img src="https://images.pexels.com/photos/18216395/pexels-photo-18216395.jpeg" class="shape-diagonal">
     <div class="text">
         <h2>Climate Change Adaptation & Resilience</h2>
         <p>We equip communities with knowledge and tools to withstand climate challenges such as droughts, floods, and environmental hazards. Youth learn climate-smart farming, water harvesting, disaster preparedness, and renewable energy solutions. Programs include early warning systems, eco-clubs, and community workshops to enhance climate resilience.</p>
@@ -141,8 +141,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 4. Sustainable Practices -->
 <section class="section">
-    <img src="https://images.pexels.com/photos/18216395/pexels-photo-18216395.jpeg">
-    <div class="text">
+    <img src="https://images.pexels.com/photos/18216395/pexels-photo-18216395.jpeg"><div class="text">
         <h2>Promoting Sustainable Living</h2>
         <p>We teach youth and communities to reduce waste, recycle plastics, compost organic materials, and adopt renewable energy sources. Activities include solar energy installations, biogas systems, eco-friendly cooking, and campaigns for sustainable consumption. These practices protect the environment while improving livelihoods and fostering green entrepreneurship.</p>
     </div>
