--- a/env.html
+++ b/env.html
@@ -141,7 +141,8 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 4. Sustainable Practices -->
 <section class="section">
-    <img src="https://images.pexels.com/photos/18216395/pexels-photo-18216395.jpeg"><div class="text">
+     <img src="https://images.pexels.com/photos/18216395/pexels-photo-18216395.jpeg" class="shape-hexagon">
+    <div class="text">
         <h2>Promoting Sustainable Living</h2>
         <p>We teach youth and communities to reduce waste, recycle plastics, compost organic materials, and adopt renewable energy sources. Activities include solar energy installations, biogas systems, eco-friendly cooking, and campaigns for sustainable consumption. These practices protect the environment while improving livelihoods and fostering green entrepreneurship.</p>
     </div>
