--- a/env.html
+++ b/env.html
@@ -154,7 +154,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Youth-Led Environmental Innovation</h2>
         <p>We empower young innovators to lead green projects, create eco-solutions, and advocate for environmental sustainability. Mentorship, innovation labs, and community projects enable youth to design impactful solutions in waste management, renewable energy, conservation, and climate adaptation. Our programs cultivate environmentally conscious leaders and innovators who contribute to a greener Kenya.</p>
     </div>
-    <img src="" class="shape-leaf">
+    <img src="https://images.pexels.com/photos/9324358/pexels-photo-9324358.jpeg" class="shape-leaf">
 </section>
 
 <a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
