--- a/health.html
+++ b/health.html
@@ -102,7 +102,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 <body>
 
 <header>
-    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="logo">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" class="logo">
     <h1 class="page-title">Health & Wellness</h1>
     <div class="empty"></div>
 </header>
@@ -113,7 +113,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Promoting Healthy Communities</h2>
         <p>Our health programs improve access to essential medical services, health education, and critical interventions for vulnerable populations. We focus on disease prevention, maternal and child health, mental wellness, and community outreach.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round">
+    <img src="https://images.pexels.com/photos/33127835/pexels-photo-33127835.jpeg" class="shape-round">
 </section>
 
 <!-- 2. Medical Outreach -->
