--- a/env.html
+++ b/env.html
@@ -141,7 +141,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 4. Sustainable Practices -->
 <section class="section">
-     <img src="https://images.pexels.com/photos/4870801/pexels-photo-4870801.jpeg" class="shape-hexagon">
+     <img src="https://pixabay.com/images/download/x-1160123_1920.jpg" class="shape-hexagon">
     <div class="text">
         <h2>Promoting Sustainable Living</h2>
         <p>We teach youth and communities to reduce waste, recycle plastics, compost organic materials, and adopt renewable energy sources. Activities include solar energy installations, biogas systems, eco-friendly cooking, and campaigns for sustainable consumption. These practices protect the environment while improving livelihoods and fostering green entrepreneurship.</p>
